ex1 add idea accessor / new main ( array test / deep copy test) / change shallow deep copy

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME = polymorphism
+NAME = world_on_fire
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Iinc
 
@@ -8,7 +8,8 @@ SRCS = \
     src/Dog.cpp \
     src/Cat.cpp \
 	src/WrongAnimal.cpp \
-	src/WrongCat.cpp
+	src/WrongCat.cpp \
+	src/Brain.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
@@ -17,7 +18,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
-%.o: %.cpp inc/Animal.hpp inc/Dog.hpp inc/Cat.hpp inc/WrongAnimal.hpp inc/WrongCat.hpp Makefile
+%.o: %.cpp inc/Animal.hpp inc/Dog.hpp inc/Cat.hpp inc/WrongAnimal.hpp inc/WrongCat.hpp inc/Brain.hpp Makefile
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
